src/test/ui/error-codes/ex-E0612.stderr
error[E0609]: no field `1` on type `Foo`
  --> $DIR/ex-E0612.rs:5:6
   |
LL |    y.1;
   |      ^ help: did you mean `0`? (a similarly named field)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0609`.
